# transcript-rag-summarizer

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  manage.py  pyproject.toml  requirements.txt
api/: embed_transcripts.py  retrieve_context.py
app/guru_app/: admin.py  index.html  urls.py  views.py
app/guru_app/templates/account/: login.html
app/guru_project/: settings.py  urls.py  wsgi.py
data/: chunks.pkl  file_paths.pkl  transcript_index.faiss  transcripts.pkl
django/guru_app/: models.py  views.py
django/guru_app/templates/account/: index.html
django/guru_app/templates/guru/: login.html
django/guru_project/: settings.py  wsgi.py
outputs/: generated_response.txt  retrieved_transcripts.txt
src/: __init__.py  download_vtt.py  embed_transcripts.py  generate_response.py  logger.py  preprocess.py  retrieve_context.py  tokenizer.py  vtt_to_txt.py  youtube_cookies.txt
utils/: download_vtt.py  preprocess.py  vtt_to_txt.py
