[project]
name = "transcript-rag-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.12",
    "faiss-cpu==1.9.0",
    "fastapi==0.116.1",
    "groq>=1.0.0",
    "pytz==2025.2",
    "sentence-transformers==3.0.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers==4.57.1",
    "uvicorn==0.38.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  # This prevents uv from trying to get 'markupsafe' here

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
